--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+/* google font word sans */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap');
+
+
 /* default css */
 * {
     margin: 0;
@@ -6,6 +10,51 @@
 }
 
 .container {
-    max-width: ;
+    max-width: 70%;
     margin: 0 auto;
+}
+
+.d-flex{
+    display: flex;
+}
+
+.jus-con-center{
+    justify-content: center;
+}
+
+.jus-con-space-between{
+    justify-content: space-between;
+}
+
+.ali-item-center {
+    align-items: center;
+}
+
+body {
+    font-family: 'Work Sans', sans-serif;
+}
+
+h2,h3,h4 {
+    color: #0B0223;
+    text-align: right;
+    font-family: Work Sans;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+p {
+    color: #534C64;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
