--- a/css/main.css
+++ b/css/main.css
@@ -261,40 +261,54 @@ header {
 }
 
 .products div {
-    /* width: 340px; */
+    width: 340px;
     height: 500px;
     flex-direction: column;
     justify-content: flex-start;
     gap: 25px;
-    position: relative;
+    
+    
 
 }
 
 .products div div {
     height: 400px;
     transition: all 0.5s;
-    background-color: rgba(143, 7, 7, 0.534);
+}
+
+.hover-icon {
+    padding: 150px 0;
+    background-color: rgba(3, 3, 3, 0.5);
+    font-size: 50px;
+    color: #FFF;
     position: absolute;
-    z-index: 2;
+    transition: all 1s;
+    z-index: -1;
+    visibility: hidden;
+    text-align: center;
+    border-radius: 18px;
+    
+}
+.hover-icon i {
+    cursor: pointer;   
 }
 
-.products div div::before {
-    width: 100px;
-    height: 200px;
-    content: '';
-    background-color: red;
-    position: relative;
-    top: 100px;
+.hover-icon a {    
+    font-size: 20px;
+    font-weight: 600;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
 }
 
-.products div div img{
-    transition: all 0.5s;
-}
 
-.products div div:hover {
-
-    /* border-radius: 18px;
-    border: 5px solid #ff42a5; */
+.products div div:hover .hover-icon{
+    visibility: visible;
+    z-index: 1;
+    border-radius: 18px;
+    border: 5px solid #ff42a5;
 }
 
 .products div p {
