--- a/css/main.css
+++ b/css/main.css
@@ -439,3 +439,44 @@ header {
 }
 
 /* our service section */
+.service-section {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
+   gap: 10px;
+}
+.service-section div {
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding: 10px 5px;
+    transition: all 1s;
+}
+
+.service-section div:hover {   
+    border: 1px solid #ff42a5;
+    border-radius: 50px;
+}
+
+.service-section div h3 {
+    color: #0B0223;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.service-section div:hover h3 {
+   
+    
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
+.service-section div img {
+    width: 50px;
+}
